--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -162,19 +162,16 @@
                 android:textColor="@color/primary_text" />
         </android.support.design.widget.TextInputLayout>
 
-        <mehdi.sakout.fancybuttons.FancyButton
+        <com.unstoppable.submitbuttonview.SubmitButton
             android:id="@+id/signup_btn"
-            android:layout_width="250dp"
-            android:layout_height="45dp"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
             android:layout_gravity="center_horizontal"
-            android:paddingBottom="@dimen/default_padding"
-            android:paddingLeft="@dimen/default_padding"
-            android:paddingRight="@dimen/default_padding"
-            android:paddingTop="@dimen/default_padding"
-            fancy:fb_defaultColor="@color/accent"
-            fancy:fb_radius="7dp"
-            fancy:fb_text="Sign Up"
-            fancy:fb_textColor="@color/icons" />
+            android:padding="@dimen/default_padding"
+            app:buttonColor="@color/accent"
+            app:buttonText="Sign Up"
+            app:failedColor="@color/color_button_failed"
+            app:succeedColor="@color/accent" />
 
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
