--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,8 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/default_margin_top"
-                app:srcCompat="@drawable/ic_android_purple_24dp" />
+                app:srcCompat="@drawable/worded_logo" />
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/login_email_layout"
