--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -24,8 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/default_margin_top"
-            app:srcCompat="@drawable/ic_android_black_24dp" />
+            app:srcCompat="@drawable/worded_logo" />
 
         <android.support.v7.widget.AppCompatTextView
             android:layout_width="wrap_content"
