--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,6 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
+                android:padding="@dimen/default_padding"
                 app:srcCompat="@drawable/worded_logo" />
 
             <android.support.design.widget.TextInputLayout
@@ -38,7 +39,6 @@
                     android:id="@+id/login_email_editText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/divider"
                     android:hint="@string/email"
                     android:inputType="text"
                     android:maxLines="1"
@@ -59,7 +59,6 @@
                     android:id="@+id/login_password_editText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/divider"
                     android:hint="@string/password"
                     android:inputType="textPassword"
                     android:maxLines="1"
@@ -82,6 +81,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
+                android:padding="@dimen/default_padding"
                 android:layout_marginTop="@dimen/default_margin_top"
                 android:text="Forgot Password? Let us help you."
                 android:textAppearance="?android:attr/textAppearanceSmall"
