--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,7 @@
     android:id="@+id/login_coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ui.activities.LoginActivity">
 
     <android.support.v4.widget.NestedScrollView
@@ -81,8 +82,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:padding="@dimen/default_padding"
                 android:layout_marginTop="@dimen/default_margin_top"
+                android:padding="@dimen/default_padding"
                 android:text="Forgot Password? Let us help you."
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textStyle="bold" />
