--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/icons"
-    android:orientation="vertical"
-    tools:context=".ui.fragments.ProfileFragment">
+    android:orientation="vertical">
 
-    <include layout="@layout/user_profile_top" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+        <include layout="@layout/user_profile"/>
 
-</LinearLayout>
+    </RelativeLayout>
+
+</android.support.design.widget.CoordinatorLayout>
