--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp">
 
-            <include layout="@layout/profile_toolbar"/>
+            <include layout="@layout/profile_toolbar" />
 
         </RelativeLayout>
 
@@ -30,36 +30,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="10dp"
-                android:weightSum="100">
+                android:padding="5dp"
+                android:background="@drawable/white_grey_border_bottom">
 
-                <RelativeLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="25dp"
-                    android:layout_marginTop="25dp"
-                    android:layout_weight="25">
+                <include layout="@layout/user_profile_top" />
 
-                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-
-                        android:id="@+id/profile_image"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:layout_centerVertical="true"
-                        android:src="@drawable/avatar"
-                        app:civ_border_color="@color/primary_text"
-                        app:civ_border_width="2dp" />
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="75">
-
-                    <include layout="@layout/user_profile_top" />
-
-                </RelativeLayout>
 
             </LinearLayout>
 
@@ -77,7 +52,7 @@
                     android:gravity="center"
                     android:horizontalSpacing="1dp"
                     android:numColumns="2"
-                    android:padding="10dp"
+                    android:padding="5dp"
                     android:stretchMode="columnWidth"
                     android:verticalSpacing="1dp"></GridView>
 
