--- a/app/src/main/res/layout/editprofile_body.xml
+++ b/app/src/main/res/layout/editprofile_body.xml
@@ -18,6 +18,7 @@
                 android:layout_height="100dp"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"
+                android:src="@drawable/avatar"
                 app:civ_border_color="@color/primary_text"
                 app:civ_border_width="2dp" />
 
@@ -150,7 +151,7 @@
                     app:srcCompat="@drawable/ic_email" />
 
                 <EditText
-                    android:id="@+id/email"
+                    android:id="@+id/email_edittext"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
