--- a/app/src/main/res/layout/fragment_editprofile.xml
+++ b/app/src/main/res/layout/fragment_editprofile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/edit_profile_coord"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/icons">
@@ -14,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <include layout="@layout/toolbar_editprofile"/>
+            <include layout="@layout/toolbar_editprofile" />
 
         </RelativeLayout>
 
